[build-system]
requires = ["setuptools>=57"]
build-backend = "setuptools.build_meta"

[project]
name = "dfktools"
description = "A toolbox for DefiKingdoms"
authors = [{name = "Ortis", email = "ortis@ortis.io"}]
version = "0.2.0"
readme = "README.md"
keywords = ["blockchain", "web3", "NFT", "etherum", "game"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    "web3",
    'importlib-metadata; python_version<"3.8"',
]