[metadata]
name = dfktools
version = 0.1.1
author = Ortis
author_email = ortis@ortis.io
description = A toolbox for DefiKingdoms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/0rtis/dfk
project_urls =
    Bug Tracker = https://github.com/0rtis/dfk/issues
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8