[metadata]
name = dfktools
version = 0.2.0
author = Ortis
author_email = ortis@ortis.io
description = A toolbox for DefiKingdoms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/0rtis/dfktools
project_urls =
    Bug Tracker = https://github.com/0rtis/dfktools/issues
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.8

[options.packages.find]
where=src
